2016-03-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* Makefile.in: Regenerate with automake 1.11.1
	* aclocal.m4: Likewise.
	* doc/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.
	* configure: Regenerate with autoconf 2.64.

2016-03-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* .gitignore: Add autom4te.cache pattern.

2016-03-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* enum.scm (enum-sequential?): Rename to...
	(/enum-sequential?): ...this.
	(gen-enum-decl): Update call for new name /enum-sequential?.

2016-03-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* utils.scm (copyright-fsf): Update format and dates in generated
	copyright header.

2016-03-02  Alan Modra  <amodra@gmail.com>

	* enum.scm (gen-enum-decl): Emit large numbers as hex.  Tidy
	start-sanitize.  Upcase just the identifiers.

2014-05-19  Peter Gavin  <pgavin@gmail.com>

        * sim-arch.scm (WI, UWI, AI, IAI): Define.
        * rtl-c.scm (mul-o1flag, mul-o2flag, rem): New.
        * rtx-funcs.scn (mul-o1flag, mul-o2flag, rem): New.

2012-12-17  Nick Clifton  <nickc@redhat.com>

	* AUTHORS: Add copyright notice.
	* INSTALL: Likewise.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* co-for-gen-all: Likewise.
	* configure.in: Likewise.
	* gen-all: Likewise.
	* gen-all-desc: Likewise.
	* gen-all-doc: Likewise.
	* gen-all-intrinsics: Likewise.
	* gen-all-opcodes: Likewise.
	* gen-all-sid: Likewise.
	* gen-all-sim: Likewise.
	* doc/Makefile.am: Likewise.
	* testsuite/Makefile.am: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* testsuite/Makefile.in: Regenerate.

2012-10-29  Mike Stump  <mikestump@comcast.net>

	* Makefile.am: Add install-html and install-pdf.
	* Makefile.in: Regenerate.

2011-08-22  Nick Clifton  <nickc@redhat.com>

	* cpu/fr30.cpu: Delete.  Move to top level cpu directory.
	* cpu/fr30.opc: Likewise.
	* cpu/ip2k.cpu: Likewise.
	* cpu/ip2k.opc: Likewise.
	* cpu/mep-avc.cpu: Likewise.